--- a/.traefik.yml
+++ b/.traefik.yml
@@ -1,7 +1,7 @@
 displayName: Simple Cache with Query Params
 summary: Simple cache plugin middleware caches responses on disk.
 type: middleware
-import: github.com/traefik/plugin-simplecache
-compatibility: go1.21
+import: github.com/alessandrolomanto/plugin-simplecache
+compatibility: TODO
 testData:
   path: /tmp
